@@ -1,38 +1,43 @@
-import java.util.List;
-import java.util.ArrayList;
-import java.util.Iterator;
+import java.util.LinkedList;
 
 public class MergeSortBaseCase implements MergeSort{
-   private Iterator<Integer> thisIter;
-   private static Integer tempInt;//need to be careful with statics in recursion
-   private Integer previous;
-
-   
-   public MergeSortBaseCase(List ogList){
+   private LinkedList<Integer> baseList;
+  
+   public MergeSortBaseCase(int inSize){
       //super();
       //thisList = ogList;//make this into a new list
       
+      /*each of these will chop off the workList. 
+      By the end, the workList should be empty, and the baseLists should all be full.
+      
+      This comment also explains the use of inSize in the Worker
+      */
       //this will allow the constructor to delete the passed in list
       //so the memory size is the same if the passed in list is deleted.
       //List<Integer> subList = new ArrayList<Integer>(list.subList(0,2));
       
+      baseList = new LinkedList<Integer>();
       
-      if(ogList.size()==2 && (int)ogList.get(0)>(int)ogList.get(1)){
-         Integer tempInt = (Integer) ogList.get(1);
-         ogList.set(1,ogList.get(0));
-         ogList.set(0,tempInt);
-      }  
-      thisIter = ogList.iterator();
+      Integer val = MergeSortWorker.workList.removeFirst(); 
+      
+      this.baseList.add(val);//null pointer
+      if(inSize==2){
+         if(baseList.getFirst()>MergeSortWorker.workList.getFirst()){
+            baseList.addFirst(MergeSortWorker.workList.removeFirst());
+         }else{
+            baseList.addLast(MergeSortWorker.workList.removeFirst());
+         }
+      }
    }
 
    @Override
    public Integer nextME(){
-      previous = thisIter.next();
-      return previous;
+      baseList.removeFirst();
+      return getValue();
    }
    
    @Override
    public Integer getValue(){
-      return previous;//index out of bounds
+      return baseList.getFirst();
    }
 }
